Player Dash() 추가, Beppi Scene 배경 추가, player, beppi Intro Animation 추가

--- a/cup_head_project/WindowsProject1/WindowsProject1.vcxproj
+++ b/cup_head_project/WindowsProject1/WindowsProject1.vcxproj
@@ -162,13 +162,12 @@
     <ClInclude Include="yaLogoAnimation.h" />
     <ClInclude Include="yaReadyAnimation.h" />
     <ClInclude Include="yaMapScene.h" />
-    <ClInclude Include="yaEnemy.h" />
+    <ClInclude Include="yaBeppiPhaseOne.h" />
     <ClInclude Include="yaObjectManager.h" />
     <ClInclude Include="yaPeaShooter.h" />
     <ClInclude Include="yaPicture.h" />
     <ClInclude Include="yaInput.h" />
     <ClInclude Include="yaLogoScene.h" />
-    <ClInclude Include="yaMeteor.h" />
     <ClInclude Include="yaBullet.h" />
     <ClInclude Include="yaPlayer.h" />
     <ClInclude Include="yaResource.h" />
@@ -198,12 +197,11 @@
     <ClCompile Include="yaLogoAnimation.cpp" />
     <ClCompile Include="yaReadyAnimation.cpp" />
     <ClCompile Include="yaMapScene.cpp" />
-    <ClCompile Include="yaEnemy.cpp" />
+    <ClCompile Include="yaBeppiPhaseOne.cpp" />
     <ClCompile Include="yaPeaShooter.cpp" />
     <ClCompile Include="yaPicture.cpp" />
     <ClCompile Include="yaInput.cpp" />
     <ClCompile Include="yaLogoScene.cpp" />
-    <ClCompile Include="yaMeteor.cpp" />
     <ClCompile Include="yaBullet.cpp" />
     <ClCompile Include="yaPlayer.cpp" />
     <ClCompile Include="yaResource.cpp" />
